--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.1.0",
+    "mongodb": "^3.1.9",
     "open-browser-webpack-plugin": "0.0.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
